[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.1.0"
authors = [
    {name = "Your name", email = "you@emaildomain.uk"},
]
description = "Project description"
dependencies = []

[tool.setuptools.packages]
find = {}
